Fixed collapsed view on top page

--- a/static/css/myhp/index.css
+++ b/static/css/myhp/index.css
@@ -28,6 +28,9 @@
 
 .indexRightBox{
   height: calc(100% - 90px);
+  display: flex;
+  flex-wrap:wrap;
+  justify-content: flex-start;
 }
 
 .headLine{
